// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum Role {
  ADMIN
  CUSTOMER
}

model User {
  id                  Int           @id @default(autoincrement())
  email               String        @unique
  password            String
  name                String?
  role                Role          @default(CUSTOMER)
  reservations        Reservation[]
  orders              Order[]
  // Admin notification bell: reservations/orders created after this moment are "new"
  // for this admin. Moves forward each time the admin opens the bell.
  notificationsSeenAt DateTime?
  createdAt           DateTime      @default(now())
  updatedAt           DateTime      @updatedAt

  @@map("users")
}

model Menu {
  id          Int         @id @default(autoincrement())
  name        String
  description String
  price       Float
  image       String
  category    String
  orderItems  OrderItem[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  @@map("menus")
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

model Reservation {
  id           Int               @id @default(autoincrement())
  customerName String
  email        String
  phone        String
  partySize    Int
  date         DateTime
  status       ReservationStatus @default(PENDING)
  notes        String?
  // The customer account that made the booking (bookings now require login).
  // Null for rows created before accounts existed, or if the account is deleted.
  userId       Int?
  user         User?             @relation(fields: [userId], references: [id], onDelete: SetNull)
  createdAt    DateTime          @default(now())
  updatedAt    DateTime          @updatedAt

  @@index([userId])
  @@map("reservations")
}

enum OrderStatus {
  PENDING
  PREPARING
  SERVED
  COMPLETED
  CANCELLED
}

// An order placed from the digital menu. Guests may order without an account,
// so there is deliberately no user relation. Totals are computed server-side.
model Order {
  id           Int         @id @default(autoincrement())
  customerName String?
  tableNumber  String?
  notes        String?
  status       OrderStatus @default(PENDING)
  // Set when a logged-in customer places the order; null for guest orders
  // (or if the account is deleted later).
  userId       Int?
  user         User?       @relation(fields: [userId], references: [id], onDelete: SetNull)
  subtotal     Float
  tax          Float
  total        Float
  items        OrderItem[]
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt

  @@index([status])
  @@index([createdAt])
  @@index([userId])
  @@map("orders")
}

// name/price are a snapshot taken at order time, so the order history stays
// correct if the menu item is later renamed, repriced, or deleted.
model OrderItem {
  id       Int     @id @default(autoincrement())
  orderId  Int
  order    Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuId   Int?
  menu     Menu?   @relation(fields: [menuId], references: [id], onDelete: SetNull)
  name     String
  price    Float
  quantity Int
  notes    String?

  @@index([orderId])
  @@map("order_items")
}
